# OmniTemplate

./: .clang-format  2sat.h  2sat.hpp  CMakeLists.txt  LICENSE  OmniTemplate.kdev4  README.md  big_integer.h  big_integer.hpp  bit.hpp  combinatorics.hpp  compile.sh  core.hpp  coroutine.h  coroutine.hpp  coverage.html  debug.hpp  dsu.h  dsu.hpp  fft.hpp  geometry.hpp  graph_theory.h  graph_theory.hpp  io.h  io.hpp  linear_algebra.h  linear_algebra.hpp  link_cut.hpp  main.hpp  modulo.h  modulo.hpp  my_int.h  my_int.hpp  number_theory.h  number_theory.hpp  operations.hpp  permutation.hpp  persistent.h  persistent.hpp  polynomial.hpp  (+19 more)
docs/: CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake  compile_commands.json  conf.py  fix_qhp.py  index.html  m.math.cache
docs/api/: classDisjointSparseTable.rst  classHLD.rst  classMinQueue.rst  classMinStack.rst  classPolynomial.rst  classSegmentTree.rst  classSparseTable.rst  class_view_hierarchy.rst  classqueue__tools_1_1MinQueue.rst  classqueue__tools_1_1MinStack.rst  classqueue__tools_1_1QueueAdaptor.rst  define_CMakeCCompilerId_8c_1a2ae9b72bb13abaabfcf2ee0ba7d3fa1d.rst  define_CMakeCCompilerId_8c_1a43e1cad902b6477bec893cb6430bd6c8.rst  define_CMakeCCompilerId_8c_1a46d5d95daa1bef867bd0179594310ed5.rst  define_CMakeCCompilerId_8c_1a81dee0709ded976b2e0319239f72d174.rst  define_CMakeCCompilerId_8c_1ad1280362da42492bbc11aa78cbf776ad.rst  define_CMakeCXXCompilerId_8cpp_1a2ae9b72bb13abaabfcf2ee0ba7d3fa1d.rst  define_CMakeCXXCompilerId_8cpp_1a34cc889e576a1ae6c84ae9e0a851ba21.rst  define_CMakeCXXCompilerId_8cpp_1a43e1cad902b6477bec893cb6430bd6c8.rst  define_CMakeCXXCompilerId_8cpp_1a81dee0709ded976b2e0319239f72d174.rst  define_CMakeCXXCompilerId_8cpp_1aba35d0d200deaeb06aee95ca297acb28.rst  define_CMakeCXXCompilerId_8cpp_1ad1280362da42492bbc11aa78cbf776ad.rst  define_core_8hpp_1a108d6c5c51dd46e82a62b262394f0242.rst  define_core_8hpp_1a2f9ddbc7133cc3a48efbc824006bd3cb.rst  define_core_8hpp_1a30d2d6ecdd50cafce635775b6e4e1cf2.rst  define_core_8hpp_1a396f7338a30cd5803df5ae220da88711.rst  define_core_8hpp_1a7796040cab730b2436f078c78d117cab.rst  define_core_8hpp_1a9d597f42af7d85fd96c46aa17cc610d9.rst  define_core_8hpp_1ad47194c03eba4b38147c9d01c0166802.rst  define_core_8hpp_1aff943633016deb6c62a519ffe92c6819.rst  define_coroutine_8hpp_1a1672ec864a13c8374fa9bfc6595e67d6.rst  define_coroutine_8hpp_1a40b2517161c64f0179823b67d4af0242.rst  define_my__int_8hpp_1a896acbe39c98c053f809a8001774ab6f.rst  (+3312 more)
docs/html/: 2sat_8hpp.html  (+3527 more)
misc/: example.cpp  fix.py  pre_headers.hpp  program.cpp  segment_tree_multi.hpp  test_rand  test_rand.cpp
src/: 2sat.hpp  big_integer.hpp  bit.hpp  coroutine.hpp  fft.hpp  flow.hpp  hld.hpp  io.hpp  link_cut.hpp  modulo.hpp  my_int.hpp  polynomial.hpp  queue.hpp  string.hpp  template.hpp  test.cpp  treap.hpp
tools/: check_headers.sh  compile.sh
(+6604 files in other folders)
